style.css
* {
  margin: 0;
  padding: 0;
  font-family: 'Poppins', sans-serif;
}

body {
  background-color: white;
}

.main-nav {
  height: 25px;
  padding: 1rem;
  background-color: rgb(45, 63, 78);
  position: sticky;
  top: 0;
  /* space */
  margin-bottom: 25px;
}

.main-nav ul {
  display: flex;
  justify-content: space-evenly;
}

.main-nav ul li {
  list-style: none;
}

.main-nav ul li a {
  text-decoration: none;
  color: white;
  font-size: 1.25rem;
}

.main-nav ul li a:hover {
  font-size: 1.5rem;
  text-shadow: 2px 2px 20px;
}

#mode:hover {
  cursor: pointer;
}

.intro {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-evenly;
  /* giving breathing space: */
  gap: 30px;
  color: #2d3f4e;
}

.my-pic {
  margin-bottom: 1.5rem;
  width: 350px;
  height: 350px;
  border-radius: 50%;
  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5), -2px -2px 5px rgba(0, 0, 0, 0.5),
    -2px 2px 5px rgba(0, 0, 0, 0.5), 2px -2px 5px rgba(0, 0, 0, 0.5);
}

.my-pic:hover {
  box-shadow: 3px 3px 15px rgba(0, 0, 0, 0.5), -3px -3px 15px rgba(0, 0, 0, 0.5),
    -3px 3px 15px rgba(0, 0, 0, 0.5), 3px -3px 15px rgba(0, 0, 0, 0.5);
}

.short-intro {
  font-size: 1.5rem;
  margin-bottom: 1.5rem;
}

.intro h1 {
  color: #2d3f4e;
  margin: 1.5rem 0;
}

.intro-text {
  padding: 1.5rem;
  text-align: center;
  line-height: 1.5;
  width: 90%;
  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5), -2px -2px 5px rgba(0, 0, 0, 0.5),
    -2px 2px 5px rgba(0, 0, 0, 0.5), 2px -2px 5px rgba(0, 0, 0, 0.5);
  /* setting max width so that it won't look that odd in bigger screen, who knows from what device the viewer will look */
  max-width: 1100px;
}

.skill-section {
  margin-top: 6rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 30px;
  justify-content: space-evenly;
  color: #2d3f4e;
}

.skill-list {
  margin-top: 1.5rem;
  display: flex;
  flex-direction: column;
  text-align: center;
  /* wrap vanda ni yesari gara */
}

@media screen and (min-width: 720px) {
  .skill-list {
    flex-direction: row;
    width: 92%;
    max-width: 1100px;
    justify-content: space-around;
    text-align: left;
    padding: 1rem;
    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5), -2px -2px 5px rgba(0, 0, 0, 0.5),
      -2px 2px 5px rgba(0, 0, 0, 0.5), 2px -2px 5px rgba(0, 0, 0, 0.5);
  }
}

.skill-list div h2 {
  text-decoration: underline;
}

.skill-list div ul {
  list-style: none;
}

/* halka breathing space: */
.skill-list div ul li {
  margin: 15px 0;
}

.skill-list div {
  margin-bottom: 1rem;
}

footer {
  text-align: center;
  margin-top: 2rem;
  font-size: small;
  color: white;
  padding: 6rem 0;
  background-color: #2d3f4e;
}

.contact-section {
  color: #2d3f4e;
  margin-top: 6rem;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.contact-section h1 {
  margin-bottom: 1rem;
}

.contacts {
  line-height: 1.5;
  padding: 0.5rem 1rem;
  margin: 2rem 0;
}

.contacts ul {
  display: flex;
  justify-content: space-evenly;
}

.contacts ul li {
  list-style: none;
  margin: 0 0.5rem;
}

.contacts ul li:hover {
  text-shadow: 2px 2px 20px;
  cursor: pointer;
}

.contacts ul li a {
  text-decoration: none;
  color: #2d3f4e;
  font-family: sans-serif;
}

@media all and (max-width: 700px) {
  .intro-text {
    padding: 30px 15px;
  }

  .contacts {
    width: 53%;
  }
}

@media all and (max-width: 470px) {
  .intro-text {
    padding: 30px 15px;
  }

  .contacts {
    width: 60%;
  }
}

@media all and (max-width: 420px) {
  .intro-text {
    padding: 25px 12px;
  }

  .contacts {
    width: 80%;
  }

  .main-nav ul {
    justify-content: space-between;
  }
}

@media all and (max-width: 320px) {
  .intro-text {
    padding: 20px 10px;
  }

  .contacts {
    width: 80%;
  }

  .contacts ul {
    flex-wrap: wrap;
  }
}

.skill-list h2 {
  font-weight: 600;
}

